[common.ide] Implement language server that supports modelpath imports
We customize the default Xtext language server to support modelpath
description files and modelpath imports. Further, we adjust the build
manager to respect project dependencies.

Bug 573755
Change-Id: I6eb035f5312f54c2be4f6448e229ecb5d819f4db